2002-04-27  Roland McGrath  <roland@frob.com>

	* configure.in: Match $host_cpu of powerpc*, not just powerpc.
	Match $host_cpu of alpha* to set asm_syntax=alpha.

2002-03-21  Roland McGrath  <roland@frob.com>

	* Makeconf ($(libname).so.$(hurd-version)): Reorder link arguments so
	that .map files come after the -( ... -) group.

2002-03-15  Roland McGrath  <roland@frob.com>

	* configure.in: Remove the checks for libparted.
	Instead, check just for a static -lstore_part library and do
	that only if no --enable-boot-store-types option was given.

	* configure.in (boot_store_types): Add remap to the default list.

2002-03-11  Roland McGrath  <roland@frob.com>

	* Makeconf ($(libname).so.$(hurd-version)):
	Include $($(libname).so-LDLIBS) and $(LDLIBS) in the link.

	* configure.in (--enable-boot-store-types): Grok this arg.
	* config.make.in (boot-store-types): New variable, set by it.
	* Makeconf [$(dir) != libstore]
	($(boot-store-types:%=../libstore/libstore_%.a)): Make these targets
	depend on ../libstore/libstore.so.

2002-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* INSTALL: Change install-hdrs to install-headers.  Reported by
	Vicente Hernando Ara <bizenton@terra.es>.

2002-01-05  Roland McGrath  <roland@frob.com>

	* aclocal.m4 (hurd_MIG_RETCODE): New macro.
	* configure.in: Broken out of here, now use that.

2002-01-01  Roland McGrath  <roland@frob.com>

	* configure.in: If mig supports `retcode', define HAVE_MIG_RETCODE.

2001-12-31  Roland McGrath  <roland@frob.com>

	* configure.in: Check mig for `retcode' keyword support.
	If not there, add -DRetCode=NoLong.

2001-11-15  Neal H Walfield  <neal@cs.uml.edu>

	* Makeconf (TAGS) [configured]: Create tags for MiG generated files.
        * Makefile (TAGS): Generate dependencies respecting broken
        code markers, i.e. based on $(working-prog-subdirs) and not
        $(prog-subdirs).

2001-12-22  Roland McGrath  <roland@frob.com>

	* configure.in (asm_syntax): Grok "powerpc" value for $host_cpu.