@@ -23,8 +23,7 @@
 #endif
 
 /* The standard way to print versions for --version.  */
-#define _SHV_SEP "; "
-#define STANDARD_HURD_VERSION(s, extra...) \
-  #s " (GNU Hurd" _SHV_SEP ##extra ") " HURD_VERSION
-
-   
+#define STANDARD_HURD_VERSION(s) \
+  #s " (GNU Hurd) " HURD_VERSION
+#define STANDARD_HURD_VERSION_EXTRA(s, extra) \
+  #s " (GNU Hurd; " extra ") " HURD_VERSION
